	- Changed interface check to use unsigned long.
	- Some more small fixes.

Mo Jul 31 11:13:04 CEST 2006

	- Added patch by Richard Hansen <gentoo-a7x@scientician.org> to fix
	  intervals being 50% too long.

Mon Feb 12 10:45:21 CET 2007

	- Hopefully fixed outstanding problems with wd_keepalive.
	- Added some documentation about return values of the test binary.
	- Released 5.3.

Wed Feb 21 17:33:30 CET 2007

	- Removed superfluous quotation from wd_keepalive.c.
	- Added sourceforge as new primary archive site.

Thu Feb 22 11:48:57 CET 2007

	- Released 5.3.1.

Thu, 26 Apr 2007 15:08:07 +0200

	- Added "another-chance" repair script written by Erik Rossen
	  <rossen@prolibre.com>.

Tue, 29 May 2007 16:34:34 +0200

	- Applied some changes to RedHat init script.
	- Added sysconf script for RedHat.

Fri, 17 Aug 2007 11:15:08 +0200

	- Made wd_keepalive honor config file option.
	- Added wd_keealive manpage.
	- Made wd_keepalive not start without a watchdog device.
	- Fixed some typos in watchdog manpage.
	- Updated Debian files.
	- Released 5.4

Mon, 14 Jan 2008 13:57:34 +0100

	- Check for existance before usage of sendmail.

Wed, 11 Feb 2009 15:00:48 +0100

	- Added patch by Jan Rouš <jaro@koukaam.se> to prevent rare segfault on
	  shutdown.

Wed, 25 Feb 2009 10:27:35 +0100

	- Added patch by Enrique Zanardi <ezanardi@atlantux.com> to let repair
	  binary know more about the failing test.
	- Expanded that patch to work for more tests.
	- Released version 5.5

Tue,  3 Mar 2009 14:59:55 +0100

	- Added patch by Enrique Zanardi <ezanardi@atlantux.com> to
	  check for the source of the ping reply packets.

Thu, 12 Mar 2009 14:36:01 +0100

	- Added patch by Lon Hohberger <lhh@redhat.com> to allow configuration
	  of timeouts.
	- Added another patch by Lon Hohberger <lhh@redhat.com> to make sure
	  signal handler does not call not-signal safe functions.
	- Made wd_keepalive accept all options watchdog accepts and not throw
	  errors on those it does not use itself.
